gjorde header synlig igen

--- a/items.html
+++ b/items.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<div id="header"></div>
 <!--Knapp för att öppna varukorgen-->
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#cart"> Varukorg </button>
 
