--- a/header.html
+++ b/header.html
@@ -11,7 +11,6 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -20,12 +19,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="items.html">Produkter</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#cart">
+                        <i class="bi bi-cart"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
-
-    <a class="logo" href="items.html">
-        <img src="images/POSE_LOGO.svg" alt="POSE_LOGO" width="400">
-
-    </a>
+    <a class="logo" href="items.html"><img src="images/POSE_LOGO.svg" alt="POSE_LOGO" width="400"></a>
 </header>
