flödet från korgen är rätt

--- a/items.html
+++ b/items.html
@@ -18,7 +18,7 @@
 <!--Varukorg-->
 <div class="offcanvas offcanvas-end" id="cart" >
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title">Varukorg</h5>
+        <h5 class="offcanvas-title">Din varukorg</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body">
@@ -35,6 +35,9 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
         </div>
+        <!--Beställnings-knapp-->
+        <a href="orderform.html" class="btn btn-light w-100 mt-4 " id="btn2">Beställ</a>
+
     </div>
 </div>
 
