--- a/orderform.html
+++ b/orderform.html
@@ -17,11 +17,8 @@
 
 <div class ="container">
   <div class="row mx-2 my-1 gy-3 mb-4">
-    <h1 class ="w-100">Beställningsformulär</h1>
+    <h1 class ="w-100">Fyll i dina leveransuppgifter</h1>
     <form id ="myForm">
-      <div id = "card">
-      </div>
-
         <div class="row">
           <div class="col-md-6">
           <label for = "name" class = "mt-3 label-colour" >Namn</label>
@@ -66,8 +63,7 @@
                 </div>
                   <div class="row">
                     <div class="col-md-6">
-                        <button type =submit class = "btn-form btn-sm mt-3">Beställ</button>
-
+                        <button type=submit class="btn-form btn-sm mt-3">Beställ</button>
         </div>
                   </div>
     </form>
