--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="items.html">Produkter</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#cart">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="offcanvas" data-bs-target="#cart">
                         <i class="bi bi-cart"></i>
                     </a>
                 </li>
