flyttade varukorgen in i header

--- a/header.html
+++ b/header.html
@@ -28,4 +28,31 @@
         </div>
     </nav>
     <a class="logo" href="items.html"><img src="images/POSE_LOGO.svg" alt="POSE_LOGO" width="400"></a>
+
+    <!--Varukorg-->
+    <div class="offcanvas offcanvas-end" id="cart" >
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title">Din varukorg</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div>
+                Put elements here, use dropdown to change amount of a product
+            </div>
+            <div class="dropdown mt-3">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Dropdown button
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+            <!--Beställnings-knapp-->
+            <a href="orderform.html" class="btn btn-light w-100 mt-4 " id="btn2">Beställ</a>
+
+        </div>
+    </div>
+
 </header>
