--- a/items.html
+++ b/items.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/items.js" defer></script>
+    <!--Header-->
     <script src="js/header.js" defer></script>
 </head>
 
@@ -21,6 +22,7 @@
     <div class="row mx-1 my-1 gy-3 mb-4" id="items"></div> <!--avstånd från topp och sida, mellan kort, innan footer-->
 </div>
 
+<!--Footer-->
 <div id="footer-placeholder"></div>
 <script src="js/footer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
