--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
     <a class="logo" href="items.html"><img src="images/POSE_LOGO.svg" alt="POSE_LOGO" width="400"></a>
 
     <!--Varukorg-->
-    <div class="offcanvas offcanvas-end" id="cart" >
+    <div class="offcanvas offcanvas-end" id="cart" aria-labelledby="cart">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">Din varukorg</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
