--- a/header.html
+++ b/header.html
@@ -1,3 +1,5 @@
+<script src="js/cart.js" defer></script>
+
 <header class="custom-header">
     <div class="row-USP fixed-top">
         <div class="USP-text">
@@ -8,7 +10,8 @@
     </div>
 
     <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,23 +39,10 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
-            <div>
-                Put elements here, use dropdown to change amount of a product
-            </div>
-            <div class="dropdown mt-3">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    Dropdown button
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-            </div>
+            <!--Behållare för produkter i varukorgen-->
+            <div id="cart-container"></div>
             <!--Beställnings-knapp-->
-            <a href="orderform.html" class="btn btn-light w-100 mt-4 " id="btn2">Beställ</a>
-
+            <a href="orderform.html" class="btn btn-light w-100 mt-4" id="btn2">Beställ</a>
         </div>
     </div>
-
 </header>
