--- a/header.html
+++ b/header.html
@@ -1,4 +1,5 @@
 <script src="js/cart.js" defer></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <header class="custom-header">
     <div class="row-USP fixed-top">
@@ -42,7 +43,7 @@
             <!--Behållare för produkter i varukorgen-->
             <div id="cart-container"></div>
             <!--Beställnings-knapp-->
-            <a href="orderform.html" class="btn btn-light w-100 mt-4" id="btn2">Beställ</a>
+            <a href="orderform.html" class="btn btn-light w-100 mt-4 effect effect-5" id="btn2">Beställ</a>
         </div>
     </div>
 </header>
