total summa också

--- a/header.html
+++ b/header.html
@@ -42,6 +42,9 @@
         <div class="offcanvas-body">
             <!--Behållare för produkter i varukorgen-->
             <div id="cart-container"></div>
+            <!--Total summa-->
+            <div id="total-sum" class="mb-3"></div>
+            <!--Töm varukorg-knapp-->
             <a class="btn btn-outline-secondary w-100" onclick="emptyCart()">Töm varukorgen</a>
             <!--Beställnings-knapp-->
             <a href="orderform.html" class="btn btn-light w-100 mt-2 effect effect-5" id="btn2">Beställ</a>
